package(default_visibility = ["//visibility:public",],)

load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

LINK_OPTS = [
    "-pthread",
    "-ldl",
]

DEFINES = [
  "ENABLE_FULL_GSL",
  "ENABLE_BOOST",
  "ENABLE_RELIC",
  "ENABLE_CIRCUITS",
  "ENABLE_NASM",
  "OC_ENABLE_PORTABLE_AES",
  "USE_JSON",
  "NDEBUG",
  "TEST_LIBP2P",
]

C_OPT = [
    "-O0",
    "-g",
    "-Wall",
    "-ggdb",
    "-rdynamic",
    "-maes",
    "-mpclmul",
    "-Wno-reserved-user-defined-literal",
]

## sparsehash
cc_library(
    name = "sparsehash_config",
    hdrs = ["sparseconfig.h"],
    include_prefix = "sparsehash/internal",
    visibility = ["//visibility:public"],
)

## libpsi
cc_library(
    name = "libpsi_config",
    hdrs = ["config.h"],
    include_prefix = "libPSI",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "libpsi",
    srcs = glob(
        [
            "libPSI/**/*.cpp",
            "libPSI/**/*.h",
            #"frontend/**/*.cpp",
        ],

    ),
    includes = ["."],
    hdrs = glob([
        "libPSI/**/*.h",
        #"frontend/**/*.h",
    ]),
    visibility = ["//visibility:public"],
    linkopts = ["-pthread -lstdc++"],
    copts = ["-I. -I@cryptoTools//:cryptoTools/cryptoTools -I@ntl//:libntl -I@google_sparsehash//:sparsehash/src -I@osu_libote//:libOTe -std=c++14 -O0 -g -ggdb -rdynamic -maes -msse2 -msse3 -msse4.1 -mpclmul"],
    linkstatic = True,
    deps = [
        ":libpsi_config",
        "@cryptoTools//:cryptoTools",
        "@osu_libote//:libOTe",
        "@ntl//:libntl",
        "@google_sparsehash//:sparsehash",
    ],
)

# test
cc_test(
    name = "test",
    copts = C_OPT,
    defines = DEFINES,
    linkopts = LINK_OPTS,
    linkstatic = False,
    deps = [
            "@google_sparsehash//:sparsehash",
            ":libpsi",
    ],
)
